fixed skills section
removed extra spacing from bottom of bar graphs

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h2.section {
 
 #skills {
 	width: auto;
-	height: 100vh;
+ 	padding-bottom: 100px;
 }
 
 #skills .skills {
